# kaggle-space-titanic

./: .gitignore  Cargo.toml  Makefile.toml
src/: data.rs  dataset.rs  inference.rs  main.rs  model.rs  training.rs
