[package]
name = "titanic-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.13.1", features = [
    "train",
    "vision",
    "tch",
    "cuda",
    "metrics",
    "tui",
    "wgpu",
] }
serde = { version = "1.0", features = ["derive"] }
csv = { version = "1.3" }
log = { version = "0.4.21" }
rand = { version = "0.8" }
